# terraform-to-ansible

./: .gitignore  .gitlab-ci.yml  .travis.yml  404.html  CHANGELOG.md  CONTRIBUTING.md  README.md  USAGE.md  ansible.cfg  index.html  mkdocs.yml  pylintrc  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  search.html  setup.py  sitemap.xml  test.py
.github/: settings.yml
.github/workflows/: default.yml  main.yml
about/: index.html
docs/: about.md  index.md  usage.md
search/: search_index.json
terraform_to_ansible/: __init__.py  __main__.py  args.py  cli.py  inventory.py  logger.py  parser.py  release.py  resources.py
terraform_to_ansible/backends/: __init__.py
terraform_to_ansible/backends/local/: __init__.py
terraform_to_ansible/backends/remote/: __init__.py
terraform_to_ansible/generators/: __init__.py  azurerm.py  digitalocean.py  vmware.py
terraform_to_ansible/parsers/: __init__.py  azurerm.py  azurerm_network_interface.py  azurerm_public_ip.py  azurerm_subnet.py  azurerm_virtual_machine.py
terraform_to_ansible/providers/: __init__.py
terraform_to_ansible/providers/digitalocean/: __init__.py
terraform_to_ansible/providers/vmware/: __init__.py  vsphere.py
usage/: index.html
