[tool.poetry]
name = "terraform-to-ansible"
version = "0.1.0"
description = ""
authors = ["Larry Smith Jr. <mrlesmithjr@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pip-tools = "^6.0.1"
PyYAML = "^5.4.1"

[tool.poetry.dev-dependencies]
ansible = "^3.2.0"
autopep8 = "^1.5.6"
flake8 = "^3.9.0"
mkdocs = "^1.1.2"
pycodestyle = "^2.7.0"
pylint = "^2.7.4"
tox = "^3.23.0"
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
